--- a/scripts/.env
+++ b/scripts/.env
@@ -10,5 +10,10 @@ WORDPRESS_DB_HOST="localhost"
 STATS_USERNAME="fabian"
 STATS_PASSWORD="fabian"
 EMAIL_CERTBOT="falclop949@g.educand.es"
-URL="practica-wp16.zapto.org"
+URL="practica-wp17.zapto.org"
 WORDPRESS_DIRECTORY="miwordpress"
+WP_PATH="/var/www/html"
+WP_USER="admin"
+WP_PASS="admin"
+WP_EMAIL="demo@demo.es"
+WP_TITLE="Página de prueba - Fabián"
