Realización de la práctica

--- a/scripts/.env
+++ b/scripts/.env
@@ -16,4 +16,5 @@ WP_PATH="/var/www/html"
 WP_USER="admin"
 WP_PASS="admin"
 WP_EMAIL="demo@demo.es"
-WP_TITLE="Página de prueba - Fabián"
+WP_TITLE="Pagina de prueba Fabián"
+nombre_secreto="nucleotido"
